# addonfactory-ucc-test

./: .flake8  .fossa.yml  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .releaserc  .semgrepignore  404.html  NOTICE  README.md  events.pickle  index.html  mkdocs.yml  mypy.ini  pyproject.toml  renovate.json  run_modinput_test.sh  sitemap.xml  test_wrapper.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-test-release.yml  docs.yml
CHANGELOG/: index.html
addonfactory-ucc-test_pytest_plugin/: index.html
before_you_write_your_first_line_of_code/: index.html
contributing/: index.html
design_principles/: index.html
docs/: CHANGELOG.md  action_diagram.md  addonfactory-ucc-test_pytest_plugin.md  back.README.md  before_you_write_your_first_line_of_code.md  contributing.md  design_principles.md  framework_deepdive.md  hello_world.md  index.md  test_scenarios.md  troubleshooting.md  ucc-test-modinput_cli_tool.md  vendor_product.md  when_you_write_your_tests.md
framework_deepdive/: index.html
hello_world/: index.html
print_page/: index.html
search/: search_index.json
splunk_add_on_ucc_modinput_test/: __init__.py  __main__.py  commands.py  init_command.py  main.py  setup_environment.py  test_wrapper.py  tools.py  typing.py
splunk_add_on_ucc_modinput_test/bootstrap/: clients.py
splunk_add_on_ucc_modinput_test/bootstrap/templates/: splunk_client_class_method.tmpl  splunk_configuration_class.tmpl  splunk_forges.tmpl  splunk_probes.tmpl  tests_settings.tmpl  vendor_client_init.tmpl
splunk_add_on_ucc_modinput_test/common/: bootstrap.py  conftest.py  splunk_instance.py  splunk_service_pool.py  ta_base.py  tests.py  utils.py
splunk_add_on_ucc_modinput_test/functional/: __init__.py  collections.py  constants.py  decorators.py  entities.py  exceptions.py  executor.py  manager.py
splunk_add_on_ucc_modinput_test/functional/common/: identifier_factory.py  pytest_config_adapter.py  splunk_instance_file.py  splunk_instance_kvstore.py
splunk_add_on_ucc_modinput_test/functional/entities/: __init__.py  collections.py  executable.py  forge.py  task.py  test.py
splunk_add_on_ucc_modinput_test/functional/pytest_plugin/: __init__.py  fixtures.py  hooks.py  options.py  utils.py
splunk_add_on_ucc_modinput_test/functional/splunk/: __init__.py  client.py  configuration.py
splunk_add_on_ucc_modinput_test/resources/modinput_functional/: ta.py  test_modinputs.py  vendor_product.py
splunk_add_on_ucc_modinput_test/resources/swagger-codegen-generators/src/main/resources/handlebars/python/: api_client.mustache
splunk_add_on_ucc_modinput_test/resources/templates/: README.tmpl  autogen_splunk_client_class_header.tmpl  autogen_splunk_client_class_method.tmpl  defaults.tmpl  kv_store_class.tmpl  managed_splunk_client_class_header.tmpl  splunk_client_class.tmpl  splunk_client_class_header.tmpl  splunk_client_class_method.tmpl  splunk_client_init.tmpl  splunk_configuration_class.tmpl  splunk_forges.tmpl  splunk_probes.tmpl  test_settings.tmpl  vendor_client_class.tmpl  vendor_configuration_class.tmpl  vendor_forges.tmpl  vendor_probes.tmpl
splunk_add_on_ucc_modinput_test/resources/ucc_modinput_functional/: defaults.py  ta.py  test_configuration.py  test_inputs.py
splunk_add_on_ucc_modinput_test/resources/ucc_modinput_functional/splunk/: client.py  forges.py  probes.py
swagger-codegen-generators/src/main/resources/handlebars/python/: rest.mustache
test_scenarios/: index.html
tests/: test_setup_environment.py
tests/common/: test_utils.py
tests/functional/: README.md  run_the_tests_for_splunk-example-ta.sh
tests/functional/common/: __init__.py  clients.py  flowtester.py
tests/functional/demo_addon_for_splunk/: globalConfig.json  pyproject.toml
tests/functional/demo_addon_for_splunk/tests/modinput_functional/: conftest.py  ta.py  test_modinputs.py  vendor_product.py
tests/functional/demo_rest_endpoints_generator/: endpoints_exposer.py
tests/functional/feature/: test_arguments.py
tests/functional/flow/: test_arguments.py
tests/functional/flow/scenarios/: arguments.py  artifactory.py  invalid_parameters.py  parametrized.py  probes.py
tests/functional/for-splunk-example-ta/ucc_modinput_functional/: test_configuration.py
tests/functional/for_splunk_example_ta/ucc_modinput_functional/: README.md  __init__.py  defaults.py  test_configuration.py  test_inputs.py  test_settings.py
tests/functional/for_splunk_example_ta/ucc_modinput_functional/splunk/: forges.py  probes.py
tests/functional/for_splunk_example_ta/ucc_modinput_functional/splunk/client/: __init__.py  _autogen_client.py  _managed_client.py  client.py  configuration.py
tests/unit/: test_bootstrap.py  test_tools.py
tests/unit/common/: test_splunk_instance.py  test_utils.py
tests/unit/resources/: README.md  openapi.json
troubleshooting/: index.html
ucc-test-modinput_cli_tool/: index.html
when_you_write_your_tests/: index.html
