#
# Copyright 2021 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "splunk_add_on_ucc_modinput_test"
version = "0.0.1"
description = "Splunk Add-on SDK Modinput test framework"
license = "Apache-2.0"
authors = ["Splunk <addonfactory@splunk.com>"]
include = ["NOTICE"]
readme = "README.md"
repository = "https://github.com/splunk/addonfactory-ucc-test"
homepage = "https://github.com/splunk/addonfactory-ucc-test"
keywords = ["splunk"]
classifiers = [
]

[tool.poetry.dependencies]
python = "^3.7"
python-on-whales = "^0.60.1"
importlib-resources = "^5.12.0"
pytz = "^2023.3"
six = "1.16.0"
pytest-xdist = "3.5.0"
filelock = "3.12.2"
mypy_extensions = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
ucc-test-modinput="splunk_add_on_ucc_modinput_test.main:main"

[build-system]
requires = ["poetry>=1.0.2"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79