#
# Copyright 2025 Splunk Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "splunk_add_on_ucc_modinput_test"
version = "1.0.1"
description = "Splunk Add-on SDK Modinput test framework"
license = "Apache-2.0"
authors = ["Splunk <addonfactory@splunk.com>"]
include = ["NOTICE"]
readme = "README.md"
repository = "https://github.com/splunk/addonfactory-ucc-test"
homepage = "https://github.com/splunk/addonfactory-ucc-test"
keywords = ["splunk", "add-on", "modinput", "functional", "pytest", "framework"]
classifiers = [
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.4.4"
importlib-resources = "^5.12.0"
pytz = "^2023.3"
jinja2 = "^3.1.6"
importlib-metadata = "^6.7.0"
splunk-sdk = "2.1.0"
six = "1.16.0"
urllib3 = ">=1.21.1,<2" # to stay consistent with PSA
certifi = ">=2024.7.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "23.3.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
mkdocs-print-site-plugin = "^2.3.6"
mkdocstrings = {version=">=0", extras=["python"]}
mypy = "1.4.1"

[tool.poetry.scripts]
ucc-test-modinput="splunk_add_on_ucc_modinput_test.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.plugins.pytest11]
ucc_modinput_test = "splunk_add_on_ucc_modinput_test.functional.pytest_plugin"
